# docs/swagger.json
@@ -88,38 +88,6 @@
                     }
                 }
             },
-            "post": {
-                "description": "Create Account",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Account"
-                ],
-                "summary": "Create Account",
-                "parameters": [
-                    {
-                        "description": "account info to create",
-                        "name": "account",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/form.AccountSignup"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/controller.CreateAccountResponse"
-                        }
-                    }
-                }
-            },
             "delete": {
                 "description": "Delete Account",
                 "produces": [
@@ -208,6 +176,40 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/controller.HelloWorld"
+                        }
+                    }
+                }
+            }
+        },
+        "/register": {
+            "post": {
+                "description": "Create Account",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Register"
+                ],
+                "summary": "Create Account",
+                "parameters": [
+                    {
+                        "description": "account info to create",
+                        "name": "account",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/form.AccountSignup"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controller.CreateAccountResponse"
                         }
                     }
                 }
